--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-github io test
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=https://www.hp100life.com/" />
+  </head>
+  <body>
+    <p><a href="http://www.hp100life.com/"></a></p>
+  </body>
+</html>
