--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">location.href="https://www.hp100life.com";</script>
+<script type="text/javascript">location.href="https://hp100life.com";</script>
